deploy/service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: __NAMESPACE__
spec:
  selector:
    app: hello
  type: ClusterIP
  ports:
  - name: hello
    protocol: TCP
    port: 80
    targetPort: 80
