deploy/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: __NAMESPACE__
spec:
  rules:
  - host: baozaolaoba.top
    http:
      paths:
      - path: /hello-app
        pathType: Prefix
        backend:
          service:
            name: hello 
            port:
              number: 80
